feat: users controller
